Modernize Everything
1. Rewrote ALL tests from JUnit 4 to JUnit 6.
2. Explicitly set up the Mockito Java agent as specified here: https://javadoc.io/doc/org.mockito/mockito-core/latest/org.mockito/org/mockito/Mockito.html#0.3
3. Transition everything I could that used File to the modern Path.
4. Change all POMs to use https for "https://maven.apache.org/xsd/maven-4.0.0.xsd"
5. Utilize @TempDir in tests to avoid the need for manual clean up.
6. Converted the DBConfiguration implementation to a record.
7. Fix typos
8. Add @Serial to ManagedProcessRuntimeException.
9. Annotated what needed to be with @NonNull.
10. Avoided modifying static field in Platform's constructor.
11.  Created TestUtil and DBFactory to aid in @TempDir integration.
12. Convert the JUnit 4 MariaDB4Rule.java to the modern JUnit 6 MariaDB4jExtension.java.
13. Created TempRoot for MariaDB4jExtension to ensure all data is properly cleaned up.
14. Rewrote DbUtils to ensure everything is done as safe as possible. jooq was used for part of this.
15. Replaced maven-plugin-testing-harness with the modern takari-plugin-testing for JUnit 6 compatibility and for more concise tests.
16.  Added a property for the mojo `@Parameter`s in AbstractRunMojo and converted all File objects to Path before use. Arrays were also converted to lists for better handling and to follow best practices.
17. Updated the maven wrapper to the latest version.

Is there anything stopping a version increase to Java 25? If not, we can bump to the latest LTS and resolve the comments in StartSimulatedForAllPlatformsTest.